# bootcamp_kunal

./: .gitignore  README.md  requirements.txt
PersistentQSQLite/: .env  .gitignore  README.md  copy()readme.md  notes.html  notes.md  pyproject.toml  queue.db  queue.db-journal  requirements.txt
PersistentQSQLite/admin/: admin.py
PersistentQSQLite/consumer/: consumer.py
PersistentQSQLite/fast.api/: main.py
PersistentQSQLite/manager/: consumer_manager.py  manager.py
PersistentQSQLite/ops/: ops.py
PersistentQSQLite/persistent/: __init__.py  factory.py  persistent.py  persistentQSQLAlchemy.py  persistent_map.py  persistent_queue.py
PersistentQSQLite/producer/: producer.py
PersistentQSQLite/supervisor/: supervisord.conf
Python_basics/: README.md
Python_basics/classes_and_object/: README.md  department.py  manager.py  project.py
Python_basics/data_structures/: README.md  ex3_2.py  ex3_3.py  ex3_4.py
Python_basics/decorators_and_lambda/: README.md  ex4_10.py  ex4_19.py  ex4_3.py  ex4_5.py
Python_basics/ex1-2/: main.py
Python_basics/ex1-3/: README.md
Python_basics/ex1-4/: README.md  helloworld.py
Python_basics/ex1-5/: README.md  pyproject.toml
Python_basics/ex1-5/many_hellos/: _config_loder.py  _default_config.yaml
Python_basics/more_classes/: README.md  ex5_10.py  ex5_11.py  ex5_15.py  ex5_5.py  ex5_8.py  script.py
apis/api_client_programming/: README.md  ex1_1.py  ex1_10.py  ex1_11.py  ex1_12.py  ex1_13.py  ex1_14.py  ex1_2.py  ex1_3.py  ex1_4.py  ex1_5.py  ex1_6.py  ex1_7.py  ex1_8.py  ex1_9.py  notes.html  notes.md  script.py
apis/api_endpoint_development/: README.md  notes.html  notes.md
apis/simple_api_development/: README.md  notes.html  notes.md  pyproject.toml  requirements.txt
apis/simple_api_development/Api_app/: database.py  main.py  models.py  test.db
apis/simple_api_development/Api_app/output/: output.txt
apis/simple_api_development/Api_app/templates/: index.html
apis/streamlit_applications/: auth.py  (+11 more)
classes_and_object/: README.md  company.py  employee.py  main.py
data_structures/: README.md  ex3_1.py  ex3_10.py  ex3_5.py  ex3_6.py  ex3_7.py  ex3_8.py  ex3_9.py  script.py
decorators_and_ambda/: ex4_1.py  ex4_13.py  ex4_14.py  ex4_15.py  ex4_16.py  ex4_17.py  ex4_18.py  ex4_2.py  ex4_20.py  ex4_6.py  ex4_7.py  ex4_8.py  ex4_9.py
decorators_and_lambda/: README.md  ex4_11.py  ex4_12.py  ex4_4.py  script.py
dub_more_classes/: ex5_1.py
ex1-1/: ex-1-1.py
ex1-3/: pyproject.toml
ex1-3/ex1_3_command/: hello.py
ex1-4/: pyproject.toml
ex1-5/: README.md
more_classes/: animal.py  book.py  class_decorator.py  dynamic_class.py  ex5_12.py  ex5_13.py  ex5_14.py  ex5_16.py  ex5_1_4.py  ex5_6.py  ex5_7.py  ex5_9.py  file_open.py  immutable_point.py  json_mixin.py  operator_overloading.py  shape.py  static_vars.py  streamable.py  temperature.py  vector.py
(+78 files in other folders)
