[tool.poetry]
name = "persistent_queue_system"
version = "0.1.0"
description = "A persistent queue system with producers, consumers, admin, and ops."
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "persistent" },
    { include = "producer" },
    { include = "consumer" },
    { include = "admin" },
    { include = "ops" },
    { include =  "manager"}
]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
typer = "^0.7.0"
sqlalchemy = "^1.4.0"
altair = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
